--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,11 @@ body {
 h1 {
   color: aquamarine;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
 }
 h2 {
   color: blue;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
 }
