--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ body {
   color: orange;
 }
 h1 {
-  color: aquamarine;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: ;
+  font-family: "Open Sans", sans-serif;
   font-weight: bold;
 }
 h2 {
