--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,10 @@ body {
   color: orange;
 }
 h1 {
-  color: ;
+  color: aquamarine;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
 }
 h2 {
   color: blue;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: bold;
 }
