--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color: rgb(1, 17, 65);
-  background-image: url("../images/body-bg.webp");
+  background-image: url("../images/body-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
